add schedule jobs and audit logging