@@ -1,11 +1,9 @@
 package com.ao.portfolio.service;
 
-import java.io.IOException;
 import java.math.BigDecimal;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.LocalDate;
-import java.time.format.DateTimeParseException;
 import java.util.List;
 
 import org.springframework.stereotype.Service;
@@ -13,161 +11,97 @@ import org.springframework.stereotype.Service;
 @Service
 public class CsvValidationService {
 
+    private final ImportRejectionService importRejectionService;
+
+    public CsvValidationService(ImportRejectionService importRejectionService) {
+        this.importRejectionService = importRejectionService;
+    }
+
     public List<String> readAndValidateFile(Path filePath, String expectedHeader, String fileName) {
-        validateFileExists(filePath, fileName);
-
-        List<String> lines = readLines(filePath, fileName);
-
-        if (lines.isEmpty()) {
-            throw new IllegalArgumentException("CSV file is empty: " + filePath);
-        }
-
-        validateHeader(lines.get(0), expectedHeader, fileName);
-
-        return lines;
-    }
-
-    public void validateFileExists(Path filePath, String fileName) {
-        if (!Files.exists(filePath)) {
-            throw new IllegalArgumentException(fileName + " does not exist: " + filePath);
-        }
-
-        if (!Files.isRegularFile(filePath)) {
-            throw new IllegalArgumentException(fileName + " path is not a regular file: " + filePath);
-        }
-    }
-
-    public List<String> readLines(Path filePath, String fileName) {
         try {
-            return Files.readAllLines(filePath);
-        } catch (IOException exception) {
-            throw new IllegalStateException("Failed to read " + fileName + ": " + filePath, exception);
+            if (!Files.exists(filePath)) {
+                String reason = "CSV file not found: " + filePath;
+                importRejectionService.logRejection(fileName, 0, "", reason);
+                throw new IllegalArgumentException(reason);
+            }
+
+            List<String> lines = Files.readAllLines(filePath);
+
+            if (lines.isEmpty()) {
+                String reason = "CSV file is empty: " + fileName;
+                importRejectionService.logRejection(fileName, 0, "", reason);
+                throw new IllegalArgumentException(reason);
+            }
+
+            String actualHeader = lines.get(0).trim();
+
+            if (!expectedHeader.equals(actualHeader)) {
+                String reason = "Invalid CSV header. Expected: " + expectedHeader + ", actual: " + actualHeader;
+                importRejectionService.logRejection(fileName, 1, lines.get(0), reason);
+                throw new IllegalArgumentException(reason);
+            }
+
+            return lines;
+        } catch (IllegalArgumentException e) {
+            throw e;
+        } catch (Exception e) {
+            String reason = "Failed to read CSV file: " + e.getMessage();
+            importRejectionService.logRejection(fileName, 0, "", reason);
+            throw new IllegalArgumentException(reason, e);
         }
     }
 
-    public void validateHeader(String actualHeader, String expectedHeader, String fileName) {
-        String normalizedActualHeader = actualHeader.trim();
-
-        if (!expectedHeader.equals(normalizedActualHeader)) {
-            throw new IllegalArgumentException(
-                    "Invalid header in "
-                            + fileName
-                            + ". Expected: "
-                            + expectedHeader
-                            + ", but found: "
-                            + normalizedActualHeader
-            );
-        }
-    }
-
-    public String[] splitAndValidateColumnCount(
-            String line,
-            int expectedColumnCount,
-            int lineNumber,
-            String fileName
-    ) {
+    public String[] splitAndValidateColumnCount(String line, int expectedColumnCount, int lineNumber, String fileName) {
         String[] columns = line.split(",", -1);
 
         if (columns.length != expectedColumnCount) {
-            throw new IllegalArgumentException(
-                    "Invalid column count in "
-                            + fileName
-                            + " at line "
-                            + lineNumber
-                            + ". Expected "
-                            + expectedColumnCount
-                            + " columns but found "
-                            + columns.length
-            );
+            String reason = "Invalid column count. Expected: " + expectedColumnCount + ", actual: " + columns.length;
+            importRejectionService.logRejection(fileName, lineNumber, line, reason);
+            throw new IllegalArgumentException(reason);
         }
 
         return columns;
     }
 
-    public String parseRequiredText(
-            String value,
-            int lineNumber,
-            String columnName,
-            String fileName
-    ) {
-        if (value == null || value.isBlank()) {
-            throw new IllegalArgumentException(
-                    "Missing required value in "
-                            + fileName
-                            + " at line "
-                            + lineNumber
-                            + ", column: "
-                            + columnName
-            );
+    public String parseRequiredText(String value, int lineNumber, String fieldName, String fileName) {
+        if (value == null || value.trim().isEmpty()) {
+            String reason = "Missing required field: " + fieldName;
+            importRejectionService.logRejection(fileName, lineNumber, value, reason);
+            throw new IllegalArgumentException(reason);
         }
 
         return value.trim();
     }
 
-    public LocalDate parseRequiredDate(
-            String value,
-            int lineNumber,
-            String columnName,
-            String fileName
-    ) {
-        if (value == null || value.isBlank()) {
-            throw new IllegalArgumentException(
-                    "Missing date value in "
-                            + fileName
-                            + " at line "
-                            + lineNumber
-                            + ", column: "
-                            + columnName
-            );
-        }
-
-        try {
-            return LocalDate.parse(value.trim());
-        } catch (DateTimeParseException exception) {
-            throw new IllegalArgumentException(
-                    "Invalid date value in "
-                            + fileName
-                            + " at line "
-                            + lineNumber
-                            + ", column: "
-                            + columnName
-                            + ", value: "
-                            + value
-                            + ". Expected format: YYYY-MM-DD"
-            );
-        }
-    }
-
-    public BigDecimal parseRequiredBigDecimal(
-            String value,
-            int lineNumber,
-            String columnName,
-            String fileName
-    ) {
-        if (value == null || value.isBlank()) {
-            throw new IllegalArgumentException(
-                    "Missing numeric value in "
-                            + fileName
-                            + " at line "
-                            + lineNumber
-                            + ", column: "
-                            + columnName
-            );
+    public BigDecimal parseRequiredBigDecimal(String value, int lineNumber, String fieldName, String fileName) {
+        if (value == null || value.trim().isEmpty()) {
+            String reason = "Missing required decimal field: " + fieldName;
+            importRejectionService.logRejection(fileName, lineNumber, value, reason);
+            throw new IllegalArgumentException(reason);
         }
 
         try {
             return new BigDecimal(value.trim());
-        } catch (NumberFormatException exception) {
-            throw new IllegalArgumentException(
-                    "Invalid decimal value in "
-                            + fileName
-                            + " at line "
-                            + lineNumber
-                            + ", column: "
-                            + columnName
-                            + ", value: "
-                            + value
-            );
+        } catch (NumberFormatException e) {
+            String reason = "Invalid decimal field: " + fieldName + ", value: " + value;
+            importRejectionService.logRejection(fileName, lineNumber, value, reason);
+            throw new IllegalArgumentException(reason);
+        }
+    }
+
+    public LocalDate parseRequiredDate(String value, int lineNumber, String fieldName, String fileName) {
+        if (value == null || value.trim().isEmpty()) {
+            String reason = "Missing required date field: " + fieldName;
+            importRejectionService.logRejection(fileName, lineNumber, value, reason);
+            throw new IllegalArgumentException(reason);
+        }
+
+        try {
+            return LocalDate.parse(value.trim());
+        } catch (Exception e) {
+            String reason = "Invalid date field: " + fieldName + ", value: " + value;
+            importRejectionService.logRejection(fileName, lineNumber, value, reason);
+            throw new IllegalArgumentException(reason);
         }
     }
 }
